[gd_scene load_steps=2 format=3 uid="uid://cbsaidmhsp2ph"]

[ext_resource type="Script" path="res://scenes/LoginPanel/LoginPanel.gd" id="1_50sjr"]

[node name="LoginPanel" type="Panel"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -256.0
offset_right = 128.0
offset_bottom = 256.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_50sjr")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ServerAddressLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Server:"
horizontal_alignment = 1

[node name="ServerAddressText" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
text = "127.0.0.1"
alignment = 1
expand_to_text_length = true

[node name="ServerPortLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Port:"
horizontal_alignment = 1

[node name="ServerPortText" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
text = "3000"
alignment = 1
expand_to_text_length = true

[node name="UsernameLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Username:"
horizontal_alignment = 1

[node name="UsernameText" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
text = "testplayer"
placeholder_text = "Enter username"
alignment = 1
expand_to_text_length = true

[node name="PasswordLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Password:"
horizontal_alignment = 1

[node name="PasswordText" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
text = "testpassword"
placeholder_text = "Enter password"
alignment = 1
secret = true
expand_to_text_length = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="LoginButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
text = "Login
"

[node name="ErrorLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1

[connection signal="pressed" from="VBoxContainer/LoginButton" to="." method="_on_login_button_pressed"]
